[project]
name = "citygan"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=4.5.0",
    "diffusers>=0.36.0",
    "fastapi>=0.128.0",
    "huggingface-hub>=1.3.7",
    "matplotlib>=3.10.8",
    "networkx>=3.4.2",
    "numpy>=2.2.6",
    "osmnx>=2.0.7",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "tqdm>=4.67.2",
    "uvicorn>=0.40.0",
]
